<resources>
    <string name="app_name">SafetyAppv1</string>
    <string name="or_sign_in_with">Or sign in with</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="text_tag_line">With many beneficial Features we bring to you a application which helps you connect to your family and loved ones and reach out to them when in danger.</string>
    <string name="tag_title">Find new\nFriends nearby</string>
    <string name="sign_in_text">Sign in to stay safe</string>
    <string name="description">Always stay connected with\nyour close ones</string>

    <string name="email_gmail_com">Email@gmail.com</string>

    <string name="password_hint">******</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_account">Don\'t have a account? Sign up one</string>
    <string name="hello_nthere">Hello\nThere!</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="stay_connected_nfeel_safe">Stay Connected\nFeel Safe.</string>
    <string name="sign_out">Sign out</string>

    <string name="mohammed">Mohammed</string>
    <string name="maps">Maps</string>
    <string name="navigation_drawer_open">Open Navigation drawer</string>
    <string name="navigation_drawer_close">Close Navigation drawer</string>
    <string name="click_me">Click me!</string>
    <string name="title_activity_maps">Map</string>
    <string name="join_group">Join Group</string>
    <string name="circle_code">Please Enter Your Friends Unique\nCode Here to Join</string>
    <string name="pinview_submit">Submit</string>
    <string name="profile">Profile</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="members">Members</string>
    <string name="my_user">My User</string>
    <string name="hospital">Hospital</string>
    <string name="home">Home</string>
    <string name="police">Police</string>
    <string name="bus_stop">Bus Stop</string>
    <string name="title_activity_group">GroupActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_group">Create Group</string>
    <string name="message_box_hint">Please Type in the Message</string>
    <string name="log_out">Log out</string>
    <string name="share_code">Share Code</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
</resources>