<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/kidsfinal"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_for_intro_screen"/>

    <View
        android:id="@+id/view_supporter"
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/image_facebook"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="25dp"
        android:contentDescription="@string/app_name"
        android:padding="3dp"
        android:src="@drawable/facebokfinal_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/view_supporter"/>

    <ImageView
        android:id="@+id/image_google"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="25dp"
        android:contentDescription="@string/app_name"
        android:padding="3dp"
        android:src="@drawable/googleplus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/view_supporter"/>

    <TextView
        android:id="@+id/textSignInWidth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/or_sign_in_with"
        android:textColor="@android:color/darker_gray"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@id/image_facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/background_for_sign_up"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/colorIntroPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/textSignInWidth"/>

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/background_for_sign_in"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/colorIntroPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/button_sign_up"/>

    <TextView
        android:id="@+id/textTagLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="15dp"
        android:text="@string/text_tag_line"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/buttonSignIn"
        />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="6dp"
        android:text="@string/stay_connected_nfeel_safe"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/textTagLine"/>




</androidx.constraintlayout.widget.ConstraintLayout>