<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/girlchildfinal" />


    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorbackgroundlayer"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="51dp"/>

    <ImageView
        android:id="@+id/applogo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/signintv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/applogo"
        android:text="@string/sign_in_text"
        android:textColor="@color/colorwhite"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/textDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/description"
        android:textAllCaps="true"
        android:textColor="@color/colorwhite"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signintv"/>

    <TextView
        android:id="@+id/textemail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textAllCaps="true"
        android:textColor="@color/colorwhite"
        android:textSize="13sp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toEndOf="@id/imageEmail"
        android:layout_marginStart="10dp"
        app:layout_constraintEnd_toEndOf="@id/viewEmailDivider"
        app:layout_constraintTop_toBottomOf="@+id/textDescription"/>

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:minHeight="35dp"
        android:hint="@string/email_gmail_com"
        android:textColorHint="#8D8D8D"
        android:textSize="17sp"
        android:gravity="top"
        android:layout_marginStart="10dp"
        android:textColor="@color/colorwhite"
        app:layout_constraintStart_toEndOf="@id/imageEmail"
        app:layout_constraintEnd_toEndOf="@id/viewEmailDivider"
        app:layout_constraintTop_toBottomOf="@id/textemail"
        android:inputType="textEmailAddress"
        tools:ignore = "Autofill"/>

    <View
        android:id="@+id/viewEmailDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="#8D8D8D"
        app:layout_constraintTop_toBottomOf="@id/inputEmail"/>

    <ImageView
        android:id="@+id/imageEmail"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:src="@drawable/email"
        android:background="@color/colorIntroPrimaryDark"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@id/viewEmailDivider"
        app:layout_constraintStart_toStartOf="@id/viewEmailDivider"
        app:layout_constraintTop_toTopOf="@id/textemail"/>


    <TextView
        android:id="@+id/textPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textAllCaps="true"
        android:textColor="@color/colorwhite"
        android:textSize="13sp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toEndOf="@id/imageEmail"
        android:layout_marginStart="10dp"
        app:layout_constraintEnd_toEndOf="@id/viewEmailDivider"
        app:layout_constraintTop_toBottomOf="@+id/viewEmailDivider"/>

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:minHeight="35dp"
        android:hint="@string/password_hint"
        android:textColorHint="#8D8D8D"
        android:textSize="17sp"
        android:gravity="top"
        android:layout_marginStart="10dp"
        android:textColor="@color/colorwhite"
        app:layout_constraintStart_toEndOf="@id/imageEmail"
        app:layout_constraintEnd_toEndOf="@id/viewEmailDivider"
        app:layout_constraintTop_toBottomOf="@id/textPassword"
        android:inputType="textPassword"
        tools:ignore = "Autofill"/>

    <ImageView
        android:id="@+id/imagePassword"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:src="@drawable/password"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@id/viewPasswordDivider"
        app:layout_constraintStart_toStartOf="@id/viewEmailDivider"
        app:layout_constraintTop_toTopOf="@id/textPassword"/>

    <View
        android:id="@+id/viewPasswordDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="#8D8D8D"
        app:layout_constraintTop_toBottomOf="@id/inputPassword"/>

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:text="@string/sign_in"
        android:textStyle="bold"
        android:textColor="@color/colorwhite"
        android:textSize="14sp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintTop_toBottomOf="@id/viewPasswordDivider"
        android:background="@drawable/button_background"/>

    <TextView
        android:id="@+id/textForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/colorwhite"
        android:textSize="16sp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/buttonSignIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/Dont_have_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/colorwhite"
        android:textSize="16sp"
        android:text="@string/dont_have_account"
        app:layout_constraintTop_toBottomOf="@id/textForgotPassword"
        android:layout_marginTop="15dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Dont_have_account"
        app:layout_constraintVertical_bias="0.193" />


</androidx.constraintlayout.widget.ConstraintLayout>